2.0/problems/join_tree_rewriting/judge/upstream/source/intermediate_to_df_plan/src/snapshots/intermediate_to_df_plan__to_execution_plan__tests__filter_qualified.snap
---
source: src/to_execution_plan.rs
description: "Plan {\n    execution_time: None,\n    root: Filter(\n        FilterNode {\n            base: BaseNode {\n                execution_time: Some(\n                    2e-5,\n                ),\n                actual_rows: Some(\n                    1,\n                ),\n                children: [\n                    SequentialScan(\n                        SequentialScanNode {\n                            base: BaseNode {\n                                execution_time: None,\n                                actual_rows: None,\n                                children: [],\n                                output: [\n                                    Field {\n                                        table_name: Some(\n                                            \"r1\",\n                                        ),\n                                        field_name: \"a\",\n                                    },\n                                    Field {\n                                        table_name: Some(\n                                            \"r1\",\n                                        ),\n                                        field_name: \"b\",\n                                    },\n                                ],\n                            },\n                            relation: \"r\",\n                            opt_filter: None,\n                        },\n                    ),\n                ],\n                output: [\n                    Field {\n                        table_name: Some(\n                            \"r1\",\n                        ),\n                        field_name: \"a\",\n                    },\n                    Field {\n                        table_name: Some(\n                            \"r1\",\n                        ),\n                        field_name: \"b\",\n                    },\n                ],\n            },\n            condition: \"(r1.a <= r1.b)\",\n        },\n    ),\n    aliases: {\n        \"r1\": \"r\",\n    },\n}"
---
FilterExec: a@0 <= b@1
  MemoryExec: partitions=1, partition_sizes=[1]
