2.0/problems/join_tree_rewriting/judge/upstream/source/intermediate_to_df_plan/src/snapshots/intermediate_to_df_plan__to_execution_plan__tests__hashjoin_selfjoin_with_alias.snap
---
source: src/to_execution_plan.rs
description: "Plan {\n    execution_time: None,\n    root: HashJoin(\n        HashJoinNode {\n            base: BaseNode {\n                execution_time: None,\n                actual_rows: None,\n                children: [\n                    SequentialScan(\n                        SequentialScanNode {\n                            base: BaseNode {\n                                execution_time: None,\n                                actual_rows: None,\n                                children: [],\n                                output: [\n                                    Field {\n                                        table_name: Some(\n                                            \"r1\",\n                                        ),\n                                        field_name: \"a\",\n                                    },\n                                    Field {\n                                        table_name: Some(\n                                            \"r1\",\n                                        ),\n                                        field_name: \"b\",\n                                    },\n                                ],\n                            },\n                            relation: \"r\",\n                            opt_filter: None,\n                        },\n                    ),\n                    SequentialScan(\n                        SequentialScanNode {\n                            base: BaseNode {\n                                execution_time: None,\n                                actual_rows: None,\n                                children: [],\n                                output: [\n                                    Field {\n                                        table_name: Some(\n                                            \"r2\",\n                                        ),\n                                        field_name: \"a\",\n                                    },\n                                    Field {\n                                        table_name: Some(\n                                            \"r2\",\n                                        ),\n                                        field_name: \"b\",\n                                    },\n                                ],\n                            },\n                            relation: \"r\",\n                            opt_filter: None,\n                        },\n                    ),\n                ],\n                output: [\n                    Field {\n                        table_name: Some(\n                            \"r1\",\n                        ),\n                        field_name: \"a\",\n                    },\n                    Field {\n                        table_name: Some(\n                            \"r1\",\n                        ),\n                        field_name: \"b\",\n                    },\n                    Field {\n                        table_name: Some(\n                            \"r2\",\n                        ),\n                        field_name: \"a\",\n                    },\n                    Field {\n                        table_name: Some(\n                            \"r2\",\n                        ),\n                        field_name: \"b\",\n                    },\n                ],\n            },\n            condition: [\n                (\n                    Field {\n                        table_name: Some(\n                            \"r1\",\n                        ),\n                        field_name: \"a\",\n                    },\n                    Field {\n                        table_name: Some(\n                            \"r2\",\n                        ),\n                        field_name: \"a\",\n                    },\n                ),\n            ],\n        },\n    ),\n    aliases: {\n        \"r2\": \"r\",\n        \"r1\": \"r\",\n    },\n}"
---
HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(a@0, a@0)]
  MemoryExec: partitions=1, partition_sizes=[1]
  MemoryExec: partitions=1, partition_sizes=[1]
