2.0/problems/join_tree_rewriting/judge/upstream/source/intermediate_to_df_plan/src/snapshots/intermediate_to_df_plan__to_execution_plan__tests__sequential_scan_with_alias_and_unqualified_filter.snap
---
source: src/to_execution_plan.rs
description: "Plan {\n    execution_time: None,\n    root: SequentialScan(\n        SequentialScanNode {\n            base: BaseNode {\n                execution_time: None,\n                actual_rows: None,\n                children: [],\n                output: [\n                    Field {\n                        table_name: Some(\n                            \"r1\",\n                        ),\n                        field_name: \"a\",\n                    },\n                ],\n            },\n            relation: \"r\",\n            opt_filter: Some(\n                \"a >= 2\",\n            ),\n        },\n    ),\n    aliases: {\n        \"r1\": \"r\",\n    },\n}"
---
ProjectionExec: expr=[a@0 as a]
  FilterExec: a@0 >= 2
    MemoryExec: partitions=1, partition_sizes=[1]
