2.0/problems/join_tree_rewriting/judge/upstream/source/intermediate_to_df_plan/src/snapshots/intermediate_to_df_plan__to_execution_plan__tests__yannakakis_join.snap
---
source: src/to_execution_plan.rs
description: "Flatten {\n    child: MultiSemiJoin {\n        guard: partitions: [...]schema: Schema { fields: [Field { name: \"a\", data_type: Int64, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} }, Field { name: \"b\", data_type: Int64, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} }], metadata: {} }projection: Some([0, 1]),\n        children: [\n            GroupBy {\n                child: MultiSemiJoin {\n                    guard: partitions: [...]schema: Schema { fields: [Field { name: \"a\", data_type: Int64, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} }, Field { name: \"b\", data_type: Int64, nullable: true, dict_id: 0, dict_is_ordered: false, metadata: {} }], metadata: {} }projection: Some([0, 1]),\n                    children: [],\n                    semijoin_keys: [],\n                    schema: NestedSchema {\n                        regular_fields: Schema {\n                            fields: [\n                                Field {\n                                    name: \"a\",\n                                    data_type: Int64,\n                                    nullable: true,\n                                    dict_id: 0,\n                                    dict_is_ordered: false,\n                                    metadata: {},\n                                },\n                                Field {\n                                    name: \"b\",\n                                    data_type: Int64,\n                                    nullable: true,\n                                    dict_id: 0,\n                                    dict_is_ordered: false,\n                                    metadata: {},\n                                },\n                            ],\n                            metadata: {},\n                        },\n                        nested_fields: [],\n                    },\n                    metrics: ExecutionPlanMetricsSet {\n                        inner: Mutex {\n                            data: MetricsSet {\n                                metrics: [],\n                            },\n                        },\n                    },\n                    once_fut: OnceAsync,\n                },\n                group_on: [\n                    0,\n                    1,\n                ],\n                nest_on: [],\n                schema: NestedSchema {\n                    regular_fields: Schema {\n                        fields: [\n                            Field {\n                                name: \"a\",\n                                data_type: Int64,\n                                nullable: true,\n                                dict_id: 0,\n                                dict_is_ordered: false,\n                                metadata: {},\n                            },\n                            Field {\n                                name: \"b\",\n                                data_type: Int64,\n                                nullable: true,\n                                dict_id: 0,\n                                dict_is_ordered: false,\n                                metadata: {},\n                            },\n                        ],\n                        metadata: {},\n                    },\n                    nested_fields: [\n                        NestedSchema {\n                            regular_fields: Schema {\n                                fields: [],\n                                metadata: {},\n                            },\n                            nested_fields: [],\n                        },\n                    ],\n                },\n                metrics: ExecutionPlanMetricsSet {\n                    inner: Mutex {\n                        data: MetricsSet {\n                            metrics: [],\n                        },\n                    },\n                },\n            },\n        ],\n        semijoin_keys: [\n            [\n                0,\n                1,\n            ],\n        ],\n        schema: NestedSchema {\n            regular_fields: Schema {\n                fields: [\n                    Field {\n                        name: \"a\",\n                        data_type: Int64,\n                        nullable: true,\n                        dict_id: 0,\n                        dict_is_ordered: false,\n                        metadata: {},\n                    },\n                    Field {\n                        name: \"b\",\n                        data_type: Int64,\n                        nullable: true,\n                        dict_id: 0,\n                        dict_is_ordered: false,\n                        metadata: {},\n                    },\n                ],\n                metadata: {},\n            },\n            nested_fields: [\n                NestedSchema {\n                    regular_fields: Schema {\n                        fields: [],\n                        metadata: {},\n                    },\n                    nested_fields: [],\n                },\n            ],\n        },\n        metrics: ExecutionPlanMetricsSet {\n            inner: Mutex {\n                data: MetricsSet {\n                    metrics: [],\n                },\n            },\n        },\n        once_fut: OnceAsync,\n    },\n    schema: YannakakisSchema {\n        output_schema: Schema {\n            fields: [\n                Field {\n                    name: \"a\",\n                    data_type: Int64,\n                    nullable: true,\n                    dict_id: 0,\n                    dict_is_ordered: false,\n                    metadata: {},\n                },\n                Field {\n                    name: \"b\",\n                    data_type: Int64,\n                    nullable: true,\n                    dict_id: 0,\n                    dict_is_ordered: false,\n                    metadata: {},\n                },\n                Field {\n                    name: \"a\",\n                    data_type: Int64,\n                    nullable: true,\n                    dict_id: 0,\n                    dict_is_ordered: false,\n                    metadata: {},\n                },\n                Field {\n                    name: \"b\",\n                    data_type: Int64,\n                    nullable: true,\n                    dict_id: 0,\n                    dict_is_ordered: false,\n                    metadata: {},\n                },\n            ],\n            metadata: {},\n        },\n        schema_inner: [\n            ENUMERATED(\n                Field {\n                    name: \"a\",\n                    data_type: Int64,\n                    nullable: true,\n                    dict_id: 0,\n                    dict_is_ordered: false,\n                    metadata: {},\n                },\n            ),\n            ENUMERATED(\n                Field {\n                    name: \"b\",\n                    data_type: Int64,\n                    nullable: true,\n                    dict_id: 0,\n                    dict_is_ordered: false,\n                    metadata: {},\n                },\n            ),\n            DUPLICATE(\n                0,\n            ),\n            DUPLICATE(\n                1,\n            ),\n        ],\n    },\n    metrics: ExecutionPlanMetricsSet {\n        inner: Mutex {\n            data: MetricsSet {\n                metrics: [],\n            },\n        },\n    },\n    alternative: false,\n}"
---
{ "operator": "Flatten", "metrics": [], "children": [{ "operator": "SEMIJOIN", "metrics": [], "children": [{ "operator": "GROUPBY", "metrics": [], "children": [{ "operator": "SEMIJOIN", "metrics": [], "children": []}]}]}]}
